--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,19 @@
 
 }
 
-@media (min-width: 1930px) {
-  :root {
-      --fs-h1: 4.5rem;
-      --fs-h2: 3.75rem;
-      --fs-h3: 1.5rem;
-      --fs-body: 1.25rem;
+
+body {
+    
+  background-color: #000;
+}
+
+@media screen (max-width: 600px) {
+  body{
+   background-color: #fff;
+
       }
 }
+
 
 
 
@@ -71,9 +76,15 @@ h2 { font-size: var(--fs-h2)}
 h3 { font-size: var(--fs-h3)}
 
 
-body {
-    
-    background-color: #000;
+
+.chart-container {
+  width: 33.33%;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  
+  
+
 }
 
 .main {
@@ -89,8 +100,8 @@ body {
   .c1 {
     width: 33.33%;
    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+   margin-left: auto;
+   margin-right: auto;
   }
 
 
